# PosSel

./: CMakeLists.txt  Sequences.hxx  SequencesAlgos.hxx  WindowAlgos.hxx  main.cpp
sel/: CMakeLists.txt  Sequences.hxx  SequencesAlgos.hxx  WindowAlgos.hxx  dummy.cxx
sel_tests/: CMakeLists.txt
sel_tests/sequenceAlgos_tests/: CMakeLists.txt  sequenceAlgos_tests.cxx
sel_tests/sequences_tests/: CMakeLists.txt  sequences_tests.cxx
